--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "url": "https://github.com/ai-ragare/nodejs-typescript/issues"
   },
   "homepage": "https://github.com/ai-ragare/nodejs-typescript#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "ts-node": "^10.9.2",
+    "express-validator": "^7.0.1"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
-    "express": "^4.18.2",
-    "ts-node": "^10.9.2"
+    "@types/express-validator": "^3.0.0"
   }
 }
