--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   },
   "homepage": "https://github.com/ai-ragare/nodejs-typescript#readme",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ts-node": "^10.9.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.4",
-    "@types/express-validator": "^3.0.0"
+    "@types/express-validator": "^3.0.0",
+    "@types/node": "^20.10.4"
   }
 }
