--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "mysql2": "^3.1.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
